syntax = "proto3";

// export PATH="$PATH:$(go env GOPATH)/bin"
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative controller/ctrl.proto

package ctrl;
option go_package = "./ctrl";

message Nothing {}

message EventData {
    string id = 1;
    string title = 2;
    string description = 3;
    string startDate = 4;
    string endDate = 5;
    int32 classID = 6;
}

message GetEventsRequest {
    int32 teacherID = 1;
}

message GetEventsResponse {
    repeated EventData events = 1;
}

message DeleteEventRequest {
    string id = 1;
}

service CalendarController {
    rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
    rpc CreateEvent(EventData) returns (Nothing);
    rpc UpdateEvent(EventData) returns (Nothing);
    rpc DeleteEvent(DeleteEventRequest) returns (Nothing);
}
